--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "formik-from-builder",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Leverage Formik-Form-Builder Creator to effortlessly construct MUI-based forms using concise JSON definitions.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "typecheck": "tsc",
-    "build": "tsup",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:types": "tsc",
+    "build:js": "tsup",
+    "build": "npm run build:types && npm run build:js"
   },
   "keywords": [
     "formik-form-builder"
@@ -24,23 +24,30 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
+    "@mui/material": "^6.3.1",
+    "formik": "^2.4.6",
     "react": "^16.8 || ^17 || ^18",
     "react-dom": "^16.8 || ^17 || ^18",
-    "formik": "^2.4.6",
-    "@mui/material": "^6.3.1",
+    "yup": "^1.6.1",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "yup": "^1.6.1"
+    "@emotion/styled": "^11.14.0"
   },
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Anthena-Group/formik-form-builder.git" 
+    "url": "https://github.com/Anthena-Group/formik-form-builder.git"
   },
-  "homepage": "https://github.com/Anthena-Group/formik-form-builder#readme", 
+  "homepage": "https://github.com/Anthena-Group/formik-form-builder#readme",
   "bugs": {
     "url": "https://github.com/Anthena-Group/formik-form-builder/issues"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.0",
+    "formik": "^2.4.6",
+    "yup": "^1.6.1"
   }
 }
