--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formik-from-builder",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Leverage Formik-Form-Builder Creator to effortlessly construct MUI-based forms using concise JSON definitions.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,13 @@
     "build": "npm run build:types && npm run build:js"
   },
   "keywords": [
-    "formik-form-builder"
+    "formik-form-builder",
+    "MUI",
+    "Formik",
+    "Form-Builder",
+    "JSON",
+    "JoyUI",
+    "React"
   ],
   "author": "codewithshinde",
   "license": "MIT",
@@ -37,17 +43,17 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Anthena-Group/formik-form-builder.git"
+    "url": "https://github.com/Anthena-Group/formik-from-builder.git"
   },
   "homepage": "https://github.com/Anthena-Group/formik-form-builder#readme",
   "bugs": {
     "url": "https://github.com/Anthena-Group/formik-form-builder/issues"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.0",
+    "@mui/material": "^6.3.1",
     "formik": "^2.4.6",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0"
   }
 }
