--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "@mui/material": "^6.3.1",
-    "formik": "^2.4.6",
     "react": "^16.8 || ^17 || ^18",
     "react-dom": "^16.8 || ^17 || ^18",
+    "@mui/material": "^6.3.1",
+    "formik": "^2.4.6",
     "yup": "^1.6.1",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0"
+    "@emotion/styled": "^11.14.0",
+    "@mui/joy": "^5.0.0-beta.51",
+    "@mui/icons-material": "^6.4.0"
   },
   "files": [
     "dist"
@@ -54,6 +56,8 @@
     "formik": "^2.4.6",
     "yup": "^1.6.1",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0"
+    "@emotion/styled": "^11.14.0",
+    "@mui/joy": "^5.0.0-beta.51",
+    "@mui/icons-material": "^6.4.0"
   }
 }
