Refactor package.json to reorganize dependencies and ensure proper structure

--- a/package.json
+++ b/package.json
@@ -20,26 +20,6 @@
   ],
   "author": "codewithshinde",
   "license": "MIT",
-  "devDependencies": {
-    "@ladle/react": "^1.1.2",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tsup": "^6.1.2",
-    "typescript": "^4.7.4"
-  },
-  "peerDependencies": {
-    "react": "^16.8 || ^17 || ^18",
-    "react-dom": "^16.8 || ^17 || ^18",
-    "@mui/material": "^6.3.1",
-    "formik": "^2.4.6",
-    "yup": "^1.6.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/joy": "^5.0.0-beta.51",
-    "@mui/icons-material": "^6.4.0"
-  },
   "files": [
     "dist"
   ],
@@ -52,12 +32,25 @@
     "url": "https://github.com/Anthena-Group/formik-form-builder/issues"
   },
   "dependencies": {
-    "@mui/material": "^6.3.1",
     "formik": "^2.4.6",
     "yup": "^1.6.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
     "@mui/joy": "^5.0.0-beta.51",
-    "@mui/icons-material": "^6.4.0"
+    "@mui/icons-material": "^6.4.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0"
+  },
+  "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@ladle/react": "^1.1.2",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "tsup": "^6.1.2",
+    "typescript": "^4.7.4"
+  },
+  "peerDependencies": {
+    "react": "^16.8 || ^17 || ^18",
+    "react-dom": "^16.8 || ^17 || ^18"
   }
 }
